<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather"
                android:text="@string/mostly_cloudy"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xxnormal"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/define_dimen_32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/img_weather"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/define_dimen_16"
                android:src="@drawable/cloudy_sunny"
                android:layout_width="@dimen/define_dimen_150"
                android:layout_height="@dimen/define_dimen_150"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_datetime"
                android:text="Mon June 17 | 10:00 AM"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/define_dimen_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_temp"
                android:text="25°"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background2"
                android:layout_margin="@dimen/define_dimen_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.333"
                    android:layout_margin="@dimen/define_dimen_16"
                    android:padding="@dimen/define_dimen_8"
                    android:orientation="vertical">

                    <ImageView
                        android:src="@drawable/rain"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/define_dimen_34"
                        android:layout_height="@dimen/define_dimen_34"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/percnet_rain"
                        android:text="22%"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_small"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/rain"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.333"
                    android:layout_margin="@dimen/define_dimen_16"
                    android:padding="@dimen/define_dimen_8"
                    android:orientation="vertical">

                    <ImageView
                        android:src="@drawable/wind"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/define_dimen_34"
                        android:layout_height="@dimen/define_dimen_34"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/wind_speed"
                        android:text="12 km/h"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_small"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/wind_speed"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.333"
                    android:layout_margin="@dimen/define_dimen_16"
                    android:padding="@dimen/define_dimen_8"
                    android:orientation="vertical">

                    <ImageView
                        android:src="@drawable/humidity"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/define_dimen_34"
                        android:layout_height="@dimen/define_dimen_34"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/percnet_humidity"
                        android:text="18%"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_small"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/today"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:textSize="@dimen/text_size_xxnormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textcolor_orange"/>

                <TextView
                    android:id="@+id/txt_next_7_day"
                    android:text="@string/next_7_day"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_weather"
                android:paddingStart="@dimen/define_dimen_16"
                android:paddingEnd="@dimen/define_dimen_16"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>